	  which will allow us to injecct VOEvent messages into the broker,
	  efectively making the Broker a publisher. This will be the default
	  publication route for eSTAR native messages.
	  
	* eSTAR/Broker/Handler.pm: Added standard skeleton and additionally a
	  handle_voevent() callback to take an "event", parse and ship to the
	  running hash of the broker.
	
	* eSTAR/Broker/SOAP/Daemon.pm: Threaded SOAP daemon.
	
	* eSTAR/Broker/SOAP/Handler.pm: SOAP wrapper for the Handler.
	
2006-02-27 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/node_agent.pl: Made remote TCP host and port setable via the
          command line, overriding the config file values.
          
        * eSTAR/NA/Handler.pm: Updated project lookups.
        
        * bin/user_agent.pl: Default nodes now LTproxy and FTNproxy, added
          settings from username and email address to command line.  

2006-02-15 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/jach_agent.pl: Changed mapping to new project IDs

	* bin/test_templates.pl: Changed to Cc the estar-devel list

	* eSTAR/JAC/Handler.pm: Ignore filters when checking observability

2006-01-20 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Fixed IVORNs

	* bin/event_test.pl: Fixed IVORNs

	* eSTAR/Broker/Util.pm: Fixed IVORNs

2006-01-18 Alasdair Allan <aa@astro.ex.ac.uk>

	* bin/event_broker.pl: Added a pubDate to each feed item.
	
	* eSTAR/Broker/Util.pm: Added an iso_to_rfc822() conversion routine.

2006-01-12 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Major bug fix, although it hard to say what went
          wrong to get the code into the state it was in to cause the bug. Also
          added IAMALIVE echoing to the main, and "other port response" code.
          
2005-12-28 Alasdair Allan <aa@astro.ex.ac.uk>

        * bin/event_broker.pl: Some minor bug and logging fixes
        
        * bin/event_test.pl: A test server to emit test messages for the